# zero2prod

./: Cargo.toml  Dockerfile  init_db.sh  init_redis.sh  spec.yaml
.github/workflows/: rust.yml
.sqlx/: query-0771004618d91f0005c43dd43204c7d6027bba9783b9e41c6e7c8033f1b6ca90.json  query-0e2fc84dc0007025a4b3df8d2cb3ffed301d23fe6fb997f6954833b00dc3b1f9.json  query-10cfd2c19464ffd51bffb8ecd51abdf94245be19230e4d866fcfe2b4327ff2fe.json  query-24ef71011d3bb3a2e656edbf48f95a60a53f0adb8234c4b85667e447559b2594.json  query-3d96bbf89d0efa4a1cc5fd96277e42ef4ebcc2d516c02c9a900db69f8af3781a.json  query-434cca3460d92b94bd31f1fff20aa828d9b54196c14fecbbb2e2e4b0c4305d3e.json  query-45502fcf9e0a78bcbde59323eaa703baf19c0283cdb609574bc5c0bbe9bad4fb.json  query-6b963204d172f74111a744e941e00e00a18b97a0060229db9e6ca50a968076ed.json  query-8e6293d4580cfafb188539b73a76c8b36492f8c6e1f78dc563c3490d12a15630.json  query-9e114ac0146a4298b7859eaeda63df89af8f4b82e12c6185daed91f8b2a16604.json  query-a13eaadc0e1f91832bd9e7d50a642033dd995cbb9f13846e234e46217e1f9c75.json  query-a4e55ad1b3d820356eb6f781edfbac0675ad572ef38f7c680543e1ea7596811b.json  query-be2ce6c3e3a661d5637062844f96e1da54537ff680086e04d88e0fb6892efe00.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230730200739_create_subscriptions_table.sql  20241005230622_create_users_table.sql  20241019111525_seed_user.sql  20250130224337_create_idempotency_table.sql  20250221174224_newsletter_issues.sql  20250221175331_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_workers.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  util.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: expiry_workers.rs  key.rs  mod.rs  persistence.rs
src/routes/: confirm_subscription.rs  mod.rs  newsletters.rs  subscribe.rs  subscription.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  newsletters.html  post.rs
src/routes/admin/password/: get.rs  mod.rs  password_form.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: check_health.rs  subscriptions.rs
tests/api/: change_password.rs  check_health.rs  confirm_subscription.rs  dashboard.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscriptions.rs
