[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.26"
config = "0.13.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = {version = "1", features = ["std", "serde_derive"]}
serde-aux = "4"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = {version ="1.4.1", features = ["v4", "fast-rng"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = { version = "0.16", features = ["derive"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.release]
strip = true

[dev-dependencies]
claims = "0.7"
wiremock = "0.6.1"
serde_json = "1.0"
