[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.26"
config = "0.15.8"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
serde = {version = "1", features = ["std", "serde_derive"]}
serde_json = "1.0"
serde-aux = "4"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = {version ="1.4.1", features = ["v4", "fast-rng", "serde"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = { version = "0.20.0", features = ["derive"] }
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1.0"
once_cell = "1.18.0"
rand = {version = "0.8", features = ["std_rng"]}
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
argon2 = {version = "0.5", features = ["std"]}
urlencoding = "2.1"
htmlescape = "0.3"
hmac = {version = "0.12", features = ["std"]}
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
num-bigint = "0.4"

[profile.release]
strip = true

[dev-dependencies]
claims = "0.7"
wiremock = "0.6.1"
linkify = "0.10"
